# NetMonkey

./: .gitignore  Agents.md  Cargo.toml  README.md  build.rs
app/: Cargo.toml  build.rs
app/src/: main.rs
app/src/views/: ip_scan.rs  mod.rs  settings.rs  tcp_client.rs  theme_edit.rs  udp_client.rs
components/: Cargo.toml
components/src/: dropdown.rs  label_with_hint.rs  lib.rs  selection_overlay.rs  subnet_slider.rs  text_input_with_hint.rs
core/: Cargo.toml
core/src/: adaptor.rs  lib.rs  scanner.rs  tasks.rs
data/: config.json
docs/: COSMIC_INTEGRATION.md  WORKSPACE_STRUCTURE.md  theme_system_enhancement.md
examples/: Cargo.toml  README.md  cosmic_theme_demo.rs
examples/src/: all_components_demo.rs  dropdown_demo.rs  subnet_slider_demo.rs  text_input_demo.rs
src/: adaptor.rs  main.rs  scanner.rs  tasks.rs
src/components/: adaptors.rs  component_design.md  dropdown.rs  label_with_hint.rs  mod.rs  text_input_with_hint.rs
src/views/: ip_scan.rs  settings.rs  tcp_client.rs  udp_client.rs
theme/: Cargo.toml
theme/src/: colors.rs  lib.rs
