[package]
name = "net_monkey"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
] }
surge-ping = "0.8.2"

iced = { version = "^0.13.1", features = ["tokio", "debug"] }      # , "time-travel"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }

# Cross-platform network adapter information
if-addrs = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6.0"
tracing-subscriber = "0.3"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# iced.workspace = true
# iced.features = ["debug", "webgl", "fira-sans"]

# uuid = { version = "1.0", features = ["js"] }
# web-sys = { workspace = true, features = ["Window", "Storage"] }
# wasmtimer.workspace = true
[dev-dependencies]
iced_test = "^0.0.0"
