[package]
name = "net_monkey"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
] }
surge-ping = "0.8.2"
futures = "0.3"
iced = { version = "^0.13.1", features = [
    "tokio",
    "debug",
    "image",
] } # , "time-travel"
image = "0.24.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }

# Cross-platform network adapter information
if-addrs = "0.7"
mac_address2 = { version = "2.0.2", features = ["serde"] }
anyhow = "1.0.98"
iced_core = "0.13.2"
iced_widget = "0.13.4"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6.0"
tracing-subscriber = "0.3"

[dev-dependencies]
iced_test = "^0.0.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
