[workspace]
resolver = "2"
members = [
    "core",
    "components",
    "theme",
    "app",
    "examples"
]
default-members = ["app"]



# Shared dependencies across all workspace members
[workspace.dependencies]
iced = { version = "^0.13.1", features = ["tokio", "debug", "image", "canvas"] }
iced_core = "0.13.2"
iced_widget = "0.13.4"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }
futures = "0.3"
surge-ping = "0.8.2"
if-addrs = "0.7"
mac_address2 = { version = "2.0.2", features = ["serde"] }
image = "0.24.9"

# COSMIC desktop integration
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["winit", "tokio", "wgpu"] }

[workspace.package]
edition = "2024"
