[package]
name = "net_monkey"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "net_monkey"
path = "src/main.rs"

[dependencies]
# Use workspace dependencies
iced.workspace = true
iced_core.workspace = true
iced_widget.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
anyhow.workspace = true
futures.workspace = true
surge-ping.workspace = true

# Use other workspace crates
net_monkey_core = { path = "../core" }
net_monkey_components = { path = "../components" }
net_monkey_theme = { path = "../theme" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6.0"
tracing-subscriber = "0.3"

[dev-dependencies]
iced_test = "^0.0.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
