[package]
name = "net_monkey_core"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Use workspace dependencies
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
uuid.workspace = true
futures.workspace = true

# Core-specific dependencies
surge-ping.workspace = true
if-addrs.workspace = true
mac_address2.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6.0"
